# IE-Fast-API-Server

./: README.md  pyproject.toml  run-server.sh  server.py
assets/data/: authors.json  books.json  reviews.json  users.json
