[tool.poetry]
name = "ie-ta"
version = "0.1.0"
description = ""
authors = ["SyntheticDemon <pouriyatajmehrabi1381@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi ="*" 
uvicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
